<resources>
    <string name="app_name">Heritage Walk</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_open_map">Open Map</string>

    <string name="label_sign_in">Email/Password Authentication</string>
    <string name="desc_sign_in">Use an email and password to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="button_open_login_signup">Open Login/Signup</string>
    <string name="title_activity_site_page">SitePageActivity</string>
    <string name="directions_api_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCF2gB5CW6-mbmWeo_Gl0gaEaXRXOvX9o8
        <!--AIzaSyBTJxyENgXTKkXyH7FXhIMyeOJAPo56C8U-->
    </string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="site_walk">Select Site</string>
    <string name="achievements">Acheivements</string>
    <string name="home">Home</string>

    <string name="font_name_gotham">gotham</string>
    <string name="register_button">Register</string>
    <string name="sign_in_button">Sign In</string>
    <string name="login_register_description">Start Your Heritage Walk</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="form_remember_me">Remember Me</string>
    <string name="submit_button">Submit</string>
    <string name="google_button">Google Sign In</string>
    <string name="password">Password</string>
    <string name="good_morning_text">Good Morning</string>
    <string name="good_afternoon_text">Good Afternoon</string>
    <string name="good_evening_text">Good Evening</string>
    <string name="google_request_token">1097770957398-v7soi0311kvfb6of64d1qakcgv0ve3a5.apps.googleusercontent.com</string>
    <string name="title_activity_achievements">AchievementsActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="action_logout">Logout</string>
    <string name="heritage_walk_logo">Heritage Walk Logo</string>
    <string name="begin_message">Are you ready to explore?</string>
    <string name="title_activity_site_list">SiteListActivity</string>
    <string name="welcome_to_heritage_walk">Welcome to Heritage Walk</string>
    <string name="find_a_heritage_site">Find a Heritage Site</string>
    <string name="achievements_title">🏅 Achievements 🏅</string>
    <string-array name="achievement_array">
        <item>first site visited</item>
        <item>Walked 10km</item>
        <item>5 sites visited</item>
        <item>10 sites visited</item>
        <item>Walked 20km</item>
        <item>25 sites visited</item>
        <item>50 sites visited</item>
        <item>Walked New West!</item>
        <item>All Sites Visited!</item>
        <item>Refer A Friend</item>
        <item>Walk With a Friend</item>
    </string-array>
    <string name="title_activity_card_view_adapter">ActivityCardViewAdapter</string>
    <string name="site_list">Site List</string>
    <string name="sub_header">The Magic of Your City\'s Past Awaits!</string>
    <string name="app_description">Heritage Walk is an application about touring the beautiful heritage locations that New Westminster has to offer! </string>
    <string name="app_call_to_action">There\'s so much to do - and so many places to see... so lets begin!</string>
    <string name="app_call_to_action_2">Where should we go first?</string>
    <string name="info_header">What is This About?</string>

</resources>
