<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_blur_34"
    tools:context="heritagewalk.com.heritagewalk.maps.MapsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <!-- Start of Logo & Wordmark -->
        <ImageView
            android:id="@+id/logo_wordmark"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_logo_crown" />
        <!-- End of Logo & Wordmark -->

        <!-- Start of Form Fields and Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Start of First Name -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/form_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>
            <!-- End of First Name -->

            <!-- Start of Last Name -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/form_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>
            <!-- End of Last Name -->

            <!-- Start of Email -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/form_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>
            <!-- End of Email -->

            <!-- Start of Password -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/form_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>
            <!-- End of Password -->

            <!-- Start of Confirm Password -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/form_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirm_password"
                    android:inputType="textPassword"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>
            <!-- End of Confirm Password -->

            <!-- Remember me Checkbox -->
            <CheckBox
                android:id="@+id/form_checkbox_ulcer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="true"
                android:text="@string/form_remember_me" />

            <!-- Submit Button -->
            <Button
                android:id="@+id/form_button_next"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_register"
                android:text="@string/submit_button" />

            <!-- Start of Google Sign-In Button -->
            <LinearLayout
                android:id="@+id/google_signin_button"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_google"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Google Icon -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_google" />

                <!-- Google Button Text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:font="@font/gotham_bold"
                    android:gravity="center_vertical"
                    android:text="@string/google_button"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

            </LinearLayout>
            <!-- End of Google Sign-In Button -->

        </LinearLayout>
        <!-- End of Form Fields and Buttons -->

    </LinearLayout>
    <!-- End of Main Content -->

</RelativeLayout>
