<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blur_34"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="heritagewalk.com.heritagewalk.maps.MapsActivity">


    <RelativeLayout
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1">

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <!-- Start of Logo & Wordmark -->
        <ImageView
            android:id="@+id/logo_wordmark"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_width"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_logo_splash" />
        <!-- End of Logo & Wordmark -->

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_wordmark"
            android:layout_marginBottom="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_constraintBottom_creator="1">


            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:orientation="vertical"

                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="170dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_register"
                    android:text="@string/action_sign_in_short"
                    android:textStyle="bold" />


                <!-- Start of Google Sign-In Button -->
                <LinearLayout
                    android:id="@+id/google_signin_button"
                    android:layout_width="170dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_google"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <!-- Google Icon -->
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_google" />

                    <!-- Google Button Text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:font="@font/gotham_bold"
                        android:gravity="center_vertical"
                        android:text="Google"
                        android:textAllCaps="true"
                        android:textSize="14sp" />

                </LinearLayout>
                <!-- End of Google Sign-In Button -->

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
